package AirlineReservationSystem;

public class ConsoleStyles 
{
	public String RESET="\033[0m";
	public String BLACK_BOLD="\033[1;30m";
	public String RED_BOLD="\033[1;31m";
}